--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.10+1
+  smooth_page_indicator: ^1.2.0+3
+  persistent_bottom_nav_bar: ^6.2.1
+  line_awesome_flutter: ^3.0.1
+  flutter_screenutil: ^5.9.3
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
