--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   line_awesome_flutter: ^3.0.1
   flutter_screenutil: ^5.9.3
   dotted_border: ^2.1.0
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
